--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {	
 	"name": "fcc-learn-npm-package-json",
 	"version": "1.0.0",
-	"author": "vnt Nguyen",
+	"author": { 
+		"name": "vnt Nguyen"
+	},
 	"dependencies": {
 		"express": "^4.14.0"
 	},
