--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {	
 	"name": "fcc-learn-npm-package-json",
-	"version": "1.0.0",
+	
 	"author": { 
 		"name": "vnt Nguyen"
 	},
+	"description": "Studying the NodeJS from freeCodeCamp",
+	"keywords": [ "studying", "freecodecamp", "NodeJS" ],
+	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
